Fixes alignment of sections on homepage

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,7 +22,7 @@ logo {
 }
 
 pageContainer {
-    margin: 30px;
+    width: 100%;
 }
 
 scheduleContainer {
